--- a/assets/less/components/footer.less
+++ b/assets/less/components/footer.less
@@ -489,24 +489,33 @@
 								&::before {
 									content: '';
 									position: absolute;
-									width: 13px;
-									height: 13px;
+									width: 13px !important;
+									height: 13px !important;
 									top: 15px;
 									left: 17px;
 									border: 1px solid @main-color;
 									border-radius: 100px;
 									transition: ease .3s all;
+									transform: none;
+									background: @main-color-light;
 								}
 
 								&:hover {
-									border: 1px solid @secondary-color;
+									border: 1px solid @main-color !important;
+									color: @white !important;
+									background: @main-color !important;
 
 									&::before {
-										border: 1px solid @secondary-color;
+										// border: 1px solid @secondary-color;
 										border-radius: 100px;
+										background: @main-color;
+										width: 13px !important;
+										height: 13px !important;
+										border: 1px solid @white !important;
 									}
 								}
 							}
+
 						}
 					}
 				}
