--- a/assets/less/misc/global.less
+++ b/assets/less/misc/global.less
@@ -673,7 +673,6 @@ button {
     align-items: center;
     // gap: 12px;
     font-size: 14px;
-    line-height: 1;
     padding: 12px 25px;
     background: transparent;
     color: @white;
@@ -880,12 +879,12 @@ button {
     }
 
     &.circle-left {
-        // https://prnt.sc/RUnyQ222LtgL
         display: flex;
         align-items: center;
-        gap: 15px;
+        gap: 0 15px;
         border: 1px solid @main-color;
         color: @main-color;
+        align-items: center;
 
         .circle-left {
             width: 28px;
@@ -3944,10 +3943,25 @@ section {
 
 
     .our-hall-section {
+
+        .gsap-item2 .content-left-wrap::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transform: translateY(var(--pseudo-before-y, 0));
+            transition: transform 0.3s ease;
+        }
+
         &.container {
             padding: 0;
             gap: 0;
             max-height: 760px;
+
+
+
 
             .content-left {
                 display: grid;
@@ -7764,37 +7778,12 @@ section {
                         top: 0;
                         background: linear-gradient(180deg, rgba(30, 30, 30, 0.41778718323266806) 0%, rgba(30, 30, 30, 0) 100%);
                     }
-
-                    &.swiper-slide-active {
-                        width: 15% !important;
-                        height: 630px;
-                        transition: all .5s ease-in-out;
-                    }
-
-                    &.swiper-slide-next {
-                        width: 70% !important;
-                        height: 630px;
-                        transition: all .5s ease-in-out;
-                    }
                 }
 
                 @media screen and (max-width:1024px) {
                     .swiper-slide {
                         height: 430px !important;
-
-                        &.swiper-slide-active {
-                            width: 90% !important;
-                            height: 430px;
-                            transition: all .5s ease-in-out;
-                        }
-
-                        &.swiper-slide-next {
-                            width: 10% !important;
-                            height: 430px;
-                            transition: all .5s ease-in-out;
-                        }
                     }
-
 
                     .swiper-button-next,
                     .swiper-button-prev {
@@ -8740,4 +8729,17 @@ section {
 #cmplz-document,
 .editor-styles-wrapper .cmplz-unlinked-mode {
     max-width: unset;
+}
+
+.cmplz-btn.cmplz-manage-consent.manage-consent-1.cmplz-show {
+    color: #fff !important;
+}
+
+
+.numInput.cur-year {
+    color: #000 !important;
+}
+
+.flatpickr-current-month .flatpickr-monthDropdown-months {
+    width: inherit !important;
 }
