Edit links & mobile fixes

--- a/assets/less/components/header.less
+++ b/assets/less/components/header.less
@@ -632,6 +632,7 @@
                                             right: 0;
                                             top: 0;
                                             margin: auto;
+                                            cursor: default;
 
                                             @keyframes zoom {
 
