--- a/assets/less/misc/global.less
+++ b/assets/less/misc/global.less
@@ -3782,6 +3782,7 @@ section {
             @media screen and (max-width:1024px) {
                 grid-template-columns: 1fr 1fr;
                 gap: 10px;
+                margin-top: -100px;
             }
 
             @media screen and (max-width:600px) {
@@ -3833,6 +3834,7 @@ section {
                     .text {
                         font-size: 20px;
                         margin-bottom: 0;
+                        text-transform: uppercase;
                     }
 
                     img {
@@ -4029,6 +4031,8 @@ section {
                     }
 
                     @media screen and (max-width:1024px) {
+                        padding-bottom: 60px;
+
                         &::before {
                             content: '';
                             position: absolute;
@@ -4041,7 +4045,6 @@ section {
                             background-repeat: no-repeat;
                         }
                     }
-
                 }
             }
 
