--- a/assets/less/pages/homepage.less
+++ b/assets/less/pages/homepage.less
@@ -1060,6 +1060,8 @@
 					}
 
 					@media screen and (max-width:1024px) {
+						padding-bottom: 60px;
+
 						&::before {
 							content: '';
 							position: absolute;
@@ -1072,7 +1074,6 @@
 							background-repeat: no-repeat;
 						}
 					}
-
 				}
 			}
 
