--- a/assets/less/misc/global.less
+++ b/assets/less/misc/global.less
@@ -8746,3 +8746,10 @@ section {
 .flatpickr-current-month .flatpickr-monthDropdown-months {
     width: inherit !important;
 }
+
+
+.fancybox-is-open .fancybox-bg {
+    opacity: .9;
+    transition-timing-function: cubic-bezier(.22, .61, .36, 1);
+    background: #F4F4ED;
+}
